force-app/main/default/objects/Individual_Application__c/Individual_Application__c.object-meta.xml
<CustomObject>
    <label>Individual Application</label>
    <pluralLabel>Individual Applications</pluralLabel>
    <description>PI applications for funding</description>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>