force-app/main/default/objects/Individual_Application__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application ID</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
    <description>Unique identifier for import (e.g. APP-001)</description>
</CustomField>