force-app/main/default/objects/Individual_Application__c/fields/Application_Title__c.field-meta.xml
<CustomField>
    <fullName>Application_Title__c</fullName>
    <label>Application Title</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>