force-app/main/default/objects/Individual_Application__c/fields/Award_Amount_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount_Awarded__c</fullName>
    <label>Award Amount Awarded</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>