force-app/main/default/objects/Individual_Application__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <label>Funding Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Funding_Opportunity__c</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>