force-app/main/default/objects/Individual_Application__c/fields/PI_Department__c.field-meta.xml
<CustomField>
    <fullName>PI_Department__c</fullName>
    <label>PI Department</label>
    <type>Text</type>
    <length>255</length>
</CustomField>