force-app/main/default/objects/Individual_Application__c/fields/PI_Name__c.field-meta.xml
<CustomField>
    <fullName>PI_Name__c</fullName>
    <label>PI Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>