force-app/main/default/objects/Individual_Application__c/fields/Sponsor_Award_Id__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Award_Id__c</fullName>
    <label>Sponsor Award ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>