force-app/main/default/objects/Individual_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><label>Draft</label><default>false</default></value>
            <value><fullName>Submitted</fullName><label>Submitted</label><default>false</default></value>
            <value><fullName>Under Review</fullName><label>Under Review</label><default>false</default></value>
            <value><fullName>Awarded</fullName><label>Awarded</label><default>false</default></value>
            <value><fullName>Not Funded</fullName><label>Not Funded</label><default>false</default></value>
            <value><fullName>Pending</fullName><label>Pending</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>